--- a/assets/css/components/block/intro.css
+++ b/assets/css/components/block/intro.css
@@ -4,9 +4,11 @@
     position    : relative;
 }
 #intro--container ,
+#skills--container > img,
 #intro--container > img{
     width   : 100%;
 }
+#skills--container > img,
 #intro--container > img{
     height      : 100%;
     position    : absolute;
