--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -4,28 +4,9 @@ header {
     text-align  : center;
     height      : 100px;
     width       : 100%;
+    z-index     : 200;
 }
-/*header::after ,*/
-/*header::before {*/
-/*    position: absolute;*/
-/*    content: "";*/
-/*    background-color: #fff;*/
-/*    top: 0;*/
-/*    box-shadow: 1px 1px 10px #000;*/
-/*}*/
-/*header::before {*/
-/*    width: 100%;*/
-/*    height: 50px;*/
-/*    left: 0;*/
-/*    border-radius: 0 0 5px 5px;*/
-/*    z-index: 1;*/
-/*}*/
-/*header::after  {*/
-/*    height: 110px;*/
-/*    width: 200px;*/
-/*    left: calc(50% - 100px);*/
-/*    z-index: 0;*/
-/*}*/
+
 header > img{
     height  : 100%;
     position: relative;
